# py_advent_2025

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/day1/: input.txt
src/adv25Tools/: coordinates.py  main.py  problemSolver.py  stringMap.py  tools.py
src/day1/: SafeDial.py  Solver.py  safeDial.py
src/day10/: button.py  indicatorLights.py  joltageStatus.py  machine.py  solver.py
src/day11/: network.py  solver.py
src/day2/: idValidator.py  solver.py
src/day3/: bank.py  highest_joltage.py  solver.py
src/day4/: paperWarehouse.py  solver.py
src/day5/: inventory.py  solver.py
src/day6/: cephalopods_math.py  solver.py  tools.py  worksheet.py
src/day7/: manifold.py  solver.py
src/day8/: Circuit.py  junctionBox.py  playground.py  solver.py
src/day9/: position.py  solver.py  tileFloor.py
tests/adv25Tools/: test_coordinates.py  test_stringMap.py  test_tools.py
tests/day1/: test_safe_dial.py
tests/day10/: test_indicator_lights.py  test_joltage_status.py  test_machine.py
tests/day11/: test_network.py
tests/day2/: test_id_validator.py
tests/day3/: test_bank.py  test_highest_joltage.py
tests/day4/: test_paperWarehouse.py  test_paper_warehouse.py
tests/day5/: test_inventory.py
tests/day6/: test_cephalopods_math.py  test_transposer.py  test_worksheet.py
tests/day7/: test_manifold.py
tests/day8/: test_circuit.py  test_junction_box.py  test_playgound.py
tests/day9/: test_position.py  test_tile_floor.py
